--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,16 +10,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
-    <title>React App</title>
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+ 
+    <title>Todo app</title>
   </head>
   <body>
-  
-    <div id="app" class="container"></div>
-    <script src="app.js"></script>
-    
+          <div id="app" class="container"></div>
+          <script src="app.js"></script>
+
   </body>
 </html>
